--- a/src/components/profile/adminPanel/adminPanel.module.scss
+++ b/src/components/profile/adminPanel/adminPanel.module.scss
@@ -1,62 +1,60 @@
 @import '@/styles/_mixins.scss';
 @import '@/styles/_colors.scss';
 
-.container{
-  
-    @include largeDesktopAndBeyondView(){
-     display:flex;
-   justify-content:center;
-   items-align:center;
-   width:100%;
-   height:100%;
-   padding:64px 0px;
-    }
-
-}
-.containerProfile{
-     width:90%;
-    background:white;
-    border-radius:24px;
-    margin:0 auto;
-    height: auto;
-    //  @include largeDesktopAndBeyondView(){
-   
-    // }
-}
-.cardHeader{
-    border-bottom:1px solid #222;
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-    @include largeDesktopAndBeyondView(){
-        padding: 32px 36px;
-    }
-}
-.typeOfListings{
+.container {
+  @include largeDesktopAndBeyondView() {
     display: flex;
-    gap:48px;
+    justify-content: center;
+    items-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 64px 0px;
+  }
 }
-.link{
-font-size: 14px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-color:#B0B0B0;
-cursor:pointer;
+.containerProfile {
+  width: 90%;
+  background: white;
+  border-radius: 24px;
+  margin: 0 auto;
+  height: auto;
+  //  @include largeDesktopAndBeyondView(){
+
+  // }
 }
-.activeLink{
-font-size: 14px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-color: #5E5E5E;
-cursor:pointer;
+.cardHeader {
+  border-bottom: 1px solid #222;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @include largeDesktopAndBeyondView() {
+    padding: 32px 36px;
+  }
 }
-.empty{
-    min-height:40vh;
-    display:flex;
+.typeOfListings {
+  display: flex;
+  gap: 48px;
 }
-.emptyText{
-    margin:auto;
-    color:#222;
+.link {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  color: #b0b0b0;
+  cursor: pointer;
+}
+.activeLink {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  color: #5e5e5e;
+  cursor: pointer;
+}
+.empty {
+  min-height: 40vh;
+  display: flex;
+}
+.emptyText {
+  margin: auto;
+  color: #222;
 }
