--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,4 +5,4 @@ $tertiary-bg-color: #000000;
 $font-color-one: #000000;
 $font-color-two: #ffffff;
 $font-color-three: #b0aeae;
-$font-color-fourth: #5E5E5E;
+$font-color-fourth: #5e5e5e;
