--- a/src/components/profile/checkListings.module.scss
+++ b/src/components/profile/checkListings.module.scss
@@ -2,12 +2,13 @@
 @import '@/styles/_colors.scss';
 
 .container {
-  @include largeDesktopAndBeyondView() {
-    display: flex;
-    justify-content: center;
-    items-align: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 24px 0px;
+  @include tabletAndBeyondView() {
     padding: 64px 0px;
   }
 }
@@ -17,22 +18,26 @@
   border-radius: 24px;
   margin: 0 auto;
   height: auto;
-  //  @include largeDesktopAndBeyondView(){
-
-  // }
 }
 .cardHeader {
-  border-bottom: 1px solid #222;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  @include largeDesktopAndBeyondView() {
+  border-bottom: 1px solid #222;
+  padding: 26px 12px;
+  @include tabletAndBeyondView() {
     padding: 32px 36px;
   }
 }
 .typeOfListings {
   display: flex;
-  gap: 48px;
+  flex-direction: row;
+  gap: 12px;
+
+  @include tabletAndBeyondView() {
+    gap: 48px;
+  }
 }
 .link {
   font-size: 14px;
