--- a/src/components/profile/favoutiteListings/favouriteListings.module.scss
+++ b/src/components/profile/favoutiteListings/favouriteListings.module.scss
@@ -12,7 +12,6 @@
     padding: 64px 0px;
   }
 }
-
 .containerProfile {
   width: 90%;
   background: white;
@@ -20,7 +19,6 @@
   margin: 0 auto;
   height: auto;
 }
-
 .cardHeader {
   display: flex;
   flex-direction: row;
@@ -41,40 +39,28 @@
   text-align: left;
 }
 
-.typeOfListings {
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
+.favouriteList {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 24px;
+  margin: 0 auto;
+  padding: 24px 24px;
 
   @include tabletAndBeyondView() {
-    gap: 48px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
-}
 
-.link {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  color: #b0b0b0;
-  cursor: pointer;
-}
+  @include desktopAndBeyondView() {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+    width: 100%;
+  }
 
-.activeLink {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  color: #5e5e5e;
-  cursor: pointer;
-}
-
-.empty {
-  min-height: 40vh;
-  display: flex;
-}
-
-.emptyText {
-  margin: auto;
-  color: #222;
+  @include largeDesktopAndBeyondView() {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+    width: 100%;
+    justify-content: space-between;
+  }
 }
