Add listing, image section fixes

--- a/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
@@ -180,3 +180,10 @@
   -webkit-appearance: none;
   margin: 0;
 }
+
+.errorMessage {
+  color: red;
+  .error {
+    text-transform: lowercase;
+  }
+}
