--- a/src/components/auth/multistep/multistep-form.module.scss
+++ b/src/components/auth/multistep/multistep-form.module.scss
@@ -21,6 +21,7 @@
 
 .login__container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   flex-direction: column;
   padding: 16px;
