--- a/src/components/listYourProperty/forms/addYourApart/imageUpload/imageUpload.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/imageUpload/imageUpload.module.scss
@@ -79,7 +79,7 @@
   position: relative;
   background-size: cover;
   background-position: center;
-  overflow: hidden;
+  // overflow: hidden;
 
   @include tabletAndBeyondView() {
     width: 100%;
@@ -203,4 +203,35 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+.tooltip {
+  position: absolute;
+  padding: 12px;
+  background-color: #fff;
+  color: #5e5e5e;
+  border: #d3d3d3 1px solid;
+  border-radius: 5px;
+  font-size: 12px;
+  top: -50px;
+  left: -120px;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  z-index: 100;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 15.73px;
+  text-align: left;
+
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: 90%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #fff transparent transparent transparent;
+    z-index: 101;
+  }
 }
