--- a/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
@@ -187,3 +187,11 @@
     text-transform: lowercase;
   }
 }
+
+.temporaryContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 80vh;
+  width: 100%;
+}
