--- a/src/components/auth/multistep/multistep-form.module.scss
+++ b/src/components/auth/multistep/multistep-form.module.scss
@@ -26,12 +26,21 @@
   flex-direction: column;
   padding: 16px;
 }
+
+.label {
+  margin-bottom: 8px;
+}
+
+.confirmPasswordLabel {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
 .input {
   width: 100%;
   border: 1px solid #d3d3d3;
   padding: 8px 12px;
   border-radius: 4px;
-  margin-top: 8px;
 }
 .input:focus {
   border: 2px solid #222222;
