--- a/src/components/profile/myFavouriteCard/myFavouriteCard.module.scss
+++ b/src/components/profile/myFavouriteCard/myFavouriteCard.module.scss
@@ -4,6 +4,7 @@
 .cardBlock {
   width: 100%;
   max-width: 327px;
+  height: 430px; // Фиксированная высота карточки
   background-color: $primary-bg-color;
   border-radius: 4px;
   box-shadow: 0px 4px 18px 0px #0000002b;
@@ -11,61 +12,41 @@
   color: black;
   margin: 0 auto;
   position: relative;
+  
   @include tabletAndBeyondView() {
-    width: 50%;
-    max-width: 314px;
+    width: 370px;
   }
 
   @include desktopAndBeyondView() {
-    width: 100%;
-    max-width: 380px;
+    width: 350px;
+  }
+
+  @include largeDesktopAndBeyondView() {
+    width: 380px;
   }
 }
 
 .cardImageBlock {
   width: 100%;
-  height: 216px;
+  height: 216px; // Фиксированная высота для блока изображений
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   overflow: hidden;
   position: relative;
+}
 
-  .swiper {
-    width: 100%;
-    height: 100%;
+.imageWrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 
-    .swiper-pagination-bullet {
-      background: rgba(255, 255, 255, 0.8) !important;
-      border-radius: 50% !important;
-    }
-
-    .swiper-pagination-bullet-active {
-      background: #bdbdbd !important;
-    }
-  }
-
-  .customNavigation {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-
-    .navButton {
-      background: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-      font-size: 16px;
-      border-radius: 4px;
-    }
-
-    .navButton:hover {
-      background: rgba(0, 0, 0, 0.8);
-    }
-  }
+.cardImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; // Обрезка и сохранение пропорций
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .unavailableOverlay {
@@ -74,7 +55,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(176, 176, 176, 0.3); /* Полупрозрачная пелена */
+  background-color: rgba(176, 176, 176, 0.3);
   z-index: 10;
   border-radius: 4px;
 }
@@ -108,7 +89,6 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
