--- a/src/components/profile/profileCard.module.scss
+++ b/src/components/profile/profileCard.module.scss
@@ -296,3 +296,11 @@
     display: none;
   }
 }
+
+.loading {
+  display: flex;
+  width: 100%;
+  height: 85vh;
+  align-items: center;
+  justify-content: center;
+}
