--- a/src/components/policySection/policy.module.scss
+++ b/src/components/policySection/policy.module.scss
@@ -4,6 +4,7 @@
 .section {
   display: flex;
   width: 100vw;
+  min-height: 80vh;
 }
 
 .container {
@@ -59,5 +60,5 @@
 .descItem {
   line-height: 24px;
   font-weight: 300;
-font-size: 16px;
+  font-size: 16px;
 }
