--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -26,7 +26,7 @@ a {
   width: 100%;
   height: 100vh;
   justify-content: center;
-  z-index: 30;
+  z-index: 1000;
 }
 .Overlay {
   position: fixed;
@@ -129,16 +129,16 @@ a {
   transform: scale(1.2);
   background-image: url('/arrow_next_sm.svg');
 }
-/* Swiper pagination bullet styles */
+
 .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: #ff0000; /* Red color */
+  background-color: #ff0000;
   opacity: 1;
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #0000ff; /* Blue color */
+  background-color: #0000ff;
 }
 .swiper-slide-thumb-active img {
   border: 2px solid #222;
