--- a/src/components/apartmentsCard/apartmentsCard.module.scss
+++ b/src/components/apartmentsCard/apartmentsCard.module.scss
@@ -3,20 +3,25 @@
 
 .cardBlock {
   width: 100%;
-  max-width: 327px;
+  max-width: 330px;
   background-color: $primary-bg-color;
   border-radius: 4px;
   box-shadow: 0px 4px 18px 0px #0000002b;
   text-decoration: none;
   color: black;
   @include tabletAndBeyondView() {
-    width: 100%;
-    max-width: 314px;
+    min-width: 340px;
+    max-width: 350px;
   }
 
   @include desktopAndBeyondView() {
-    width: 100%;
-    max-width: 412px;
+    min-width: 350px;
+    max-width: 460px;
+  }
+
+  @include largeDesktopAndBeyondView() {
+    min-width: 340px;
+    max-width: 400px;
   }
 }
 
