--- a/src/components/profile/myFavouriteCard/myFavouriteCard.module.scss
+++ b/src/components/profile/myFavouriteCard/myFavouriteCard.module.scss
@@ -3,8 +3,8 @@
 
 .cardBlock {
   width: 100%;
-  max-width: 327px;
-  height: 430px; // Фиксированная высота карточки
+  max-width: 330px;
+  height: 430px;
   background-color: $primary-bg-color;
   border-radius: 4px;
   box-shadow: 0px 4px 18px 0px #0000002b;
@@ -12,23 +12,26 @@
   color: black;
   margin: 0 auto;
   position: relative;
-  
+
   @include tabletAndBeyondView() {
-    width: 370px;
+    min-width: 340px;
+    max-width: 350px;
   }
 
   @include desktopAndBeyondView() {
-    width: 350px;
+    min-width: 350px;
+    max-width: 360px;
   }
 
   @include largeDesktopAndBeyondView() {
-    width: 380px;
+    min-width: 380px;
+    max-width: 400px;
   }
 }
 
 .cardImageBlock {
   width: 100%;
-  height: 216px; // Фиксированная высота для блока изображений
+  height: 216px;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   overflow: hidden;
@@ -44,7 +47,7 @@
 .cardImage {
   width: 100%;
   height: 100%;
-  object-fit: cover; // Обрезка и сохранение пропорций
+  object-fit: cover;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
 }
