--- a/src/components/rentalFilters/rentalFilters.module.scss
+++ b/src/components/rentalFilters/rentalFilters.module.scss
@@ -25,6 +25,11 @@ body.no-scroll {
   width: 100%;
 
   @include tabletAndBeyondView() {
+    gap: 16px;
+    display: flex;
+    flex-direction: column;
+  }
+  @include desktopAndBeyondView() {
     display: flex;
     flex-direction: row;
   }
@@ -131,6 +136,7 @@ body.no-scroll {
   @include tabletAndBeyondView() {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 
@@ -228,5 +234,5 @@ body.no-scroll {
   justify-content: center;
   gap: 16px;
   width: 100%;
-  margin-top: auto;
+  padding: 30px 0;
 }
