Fixed property page footer issue, all rentals now show all listings and created tour requests functionality with sendgrid

--- a/src/components/customInput/customInput.module.scss
+++ b/src/components/customInput/customInput.module.scss
@@ -11,6 +11,13 @@
   @include tabletAndBeyondView() {
     max-width: 200px;
   }
+
+  @include desktopAndBeyondView() {
+    max-width: 300px;
+  }
+  @include largeDesktopAndBeyondView() {
+    max-width: 500px;
+  }
 }
 
 .label {
