--- a/src/components/listYourProperty/forms/addYourApart/propertyComponents/property.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/propertyComponents/property.module.scss
@@ -247,3 +247,18 @@
     gap: 40px;
   }
 }
+
+.containerImage {
+  max-width: 370px;
+  max-height: 370px;
+
+  @include tabletAndBeyondView() {
+    max-width: 400px;
+    max-height: 400px;
+  }
+
+  @include desktopAndBeyondView() {
+    max-width: 500px;
+    max-height: 500px;
+  }
+}
