Finished tour requests pages, created SendGrid template, fixed list proprety page adaptation

--- a/src/components/listYourProperty/forms/addYourApart/propertyComponents/property.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/propertyComponents/property.module.scss
@@ -249,8 +249,9 @@
 }
 
 .containerImage {
-  max-width: 370px;
-  max-height: 370px;
+
+  max-width: 90vw;
+  max-height: 90vw;
 
   @include tabletAndBeyondView() {
     max-width: 400px;
