--- a/src/components/profile/receivedTourRequest/tourRequestCard/RecievedTourRequestCard.module.scss
+++ b/src/components/profile/receivedTourRequest/tourRequestCard/RecievedTourRequestCard.module.scss
@@ -94,6 +94,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: center;
   gap: 16px;
   margin-top: 20px;
 }
