Refactored properties and users statuses and verified states and their mapping

--- a/src/components/profile/myListCard/myListCard.module.scss
+++ b/src/components/profile/myListCard/myListCard.module.scss
@@ -127,10 +127,14 @@
 
 .titleContainer {
   display: flex;
-  gap: 16px;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column-reverse;
+  gap: 4px;
+  align-items: flex-start;
   padding-bottom: 16px;
+  @include tabletAndBeyondView() {
+    flex-direction: row;
+    gap: 16px;
+  }
 }
 
 .titleLeftContainer {
