--- a/src/components/propertyDetails/propertyDetails.module.scss
+++ b/src/components/propertyDetails/propertyDetails.module.scss
@@ -6,10 +6,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0px 24px;
+  padding: 0 5px;
   background-color: $secondary-bg-color;
   @include tabletAndBeyondView() {
-    padding: 0px 80px;
+    padding: 0 80px;
   }
 }
 
@@ -18,7 +18,7 @@
   flex-direction: column;
   width: 100%;
   gap: 28px;
-  padding: 24px;
+  padding: 10px;
   background-color: $primary-bg-color;
   border-radius: 10px;
 }
