fixed wide screens adaptation

--- a/src/components/profile/profileCard.module.scss
+++ b/src/components/profile/profileCard.module.scss
@@ -18,6 +18,7 @@
   border-radius: 14px;
   margin: 0 auto;
   height: auto;
+  max-width: 1920px;
   @include tabletAndBeyondView() {
     border-radius: 24px;
   }
