--- a/src/components/policySection/policy.module.scss
+++ b/src/components/policySection/policy.module.scss
@@ -3,6 +3,7 @@
 
 .section {
   display: flex;
+  justify-content: center;
   width: 100vw;
   min-height: 80vh;
 }
@@ -11,6 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
+  max-width: 1920px;
   gap: 24px;
   align-items: flex-start;
   justify-content: flex-start;
