--- a/src/components/profile/routerProfile.module.scss
+++ b/src/components/profile/routerProfile.module.scss
@@ -16,9 +16,12 @@
   background-color: #fff;
   // padding: 16px 24px;
   box-shadow: 0px 10px 12px 0px rgba(0, 0, 0, 0.04);
+  display: flex;
   align-items: center;
+  justify-content: center;
   z-index: 30;
   position: relative;
+
   @include tabletAndBeyondView() {
     padding: 32px 72px;
   }
@@ -26,6 +29,7 @@
 .linkContainer {
   display: flex;
   width: 100%;
+  max-width: 1920px;
   flex-direction: row;
   align-items: center;
   gap: 32px;
