--- a/src/components/propertyFixedBlock/propertyFixedBlock.module.scss
+++ b/src/components/propertyFixedBlock/propertyFixedBlock.module.scss
@@ -3,10 +3,10 @@
 
 .container {
   min-height: 64px;
-
   @include tabletAndBeyondView() {
     min-height: 126px;
   }
+
 }
 
 .fixedBlock,
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 1920px;
+  //max-width: 1920px;
   height: 64px;
   padding: 0 10px;
   background-color: $primary-bg-color;
@@ -45,6 +45,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  max-width: 1920px;
   width: 100%;
 }
 
